fixing ie on vista visual prob where nav bar was cut off at the bottom.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -27,6 +27,7 @@ h2 {
 
 #tabbed_header #nav {
     background: silver;
+    height: 35px;
 }
 
 #tabbed_header ul {
